LOIS_1/gen/unclear_coverageParser.py
# Generated from D:/LOIS/LOIS/LOIS_1/unclear_coverage.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class unclear_coverageParser ( Parser ):

    grammarFileName = "unclear_coverage.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "','", "'<'", 
                     "'>'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "DECIMAL", "VAR", "COMMA", "OPENBRACKET", 
                      "CLOSEBRACKET", "OPENFIGURE", "CLOSEFIGURE" ]

    RULE_formula = 0
    RULE_subformula = 1

    ruleNames =  [ "formula", "subformula" ]

    EOF = Token.EOF
    DECIMAL=1
    VAR=2
    COMMA=3
    OPENBRACKET=4
    CLOSEBRACKET=5
    OPENFIGURE=6
    CLOSEFIGURE=7

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FormulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPENFIGURE(self):
            return self.getToken(unclear_coverageParser.OPENFIGURE, 0)

        def subformula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(unclear_coverageParser.SubformulaContext)
            else:
                return self.getTypedRuleContext(unclear_coverageParser.SubformulaContext,i)


        def CLOSEFIGURE(self):
            return self.getToken(unclear_coverageParser.CLOSEFIGURE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(unclear_coverageParser.COMMA)
            else:
                return self.getToken(unclear_coverageParser.COMMA, i)

        def getRuleIndex(self):
            return unclear_coverageParser.RULE_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormula" ):
                listener.enterFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormula" ):
                listener.exitFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormula" ):
                return visitor.visitFormula(self)
            else:
                return visitor.visitChildren(self)




    def formula(self):

        localctx = unclear_coverageParser.FormulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_formula)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 4
            self.match(unclear_coverageParser.OPENFIGURE)
            self.state = 5
            self.subformula()
            self.state = 10
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 6
                self.match(unclear_coverageParser.COMMA)
                self.state = 7
                self.subformula()
                self.state = 12
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 13
            self.match(unclear_coverageParser.CLOSEFIGURE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubformulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPENBRACKET(self):
            return self.getToken(unclear_coverageParser.OPENBRACKET, 0)

        def VAR(self):
            return self.getToken(unclear_coverageParser.VAR, 0)

        def COMMA(self):
            return self.getToken(unclear_coverageParser.COMMA, 0)

        def DECIMAL(self):
            return self.getToken(unclear_coverageParser.DECIMAL, 0)

        def CLOSEBRACKET(self):
            return self.getToken(unclear_coverageParser.CLOSEBRACKET, 0)

        def getRuleIndex(self):
            return unclear_coverageParser.RULE_subformula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubformula" ):
                listener.enterSubformula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubformula" ):
                listener.exitSubformula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubformula" ):
                return visitor.visitSubformula(self)
            else:
                return visitor.visitChildren(self)




    def subformula(self):

        localctx = unclear_coverageParser.SubformulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_subformula)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15
            self.match(unclear_coverageParser.OPENBRACKET)
            self.state = 16
            self.match(unclear_coverageParser.VAR)
            self.state = 17
            self.match(unclear_coverageParser.COMMA)
            self.state = 18
            self.match(unclear_coverageParser.DECIMAL)
            self.state = 19
            self.match(unclear_coverageParser.CLOSEBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





